--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -8,6 +8,7 @@
 
 .header h1 {
   font-size: 3.5rem;
+  font-weight: bolder;
 }
 
 .header p {
@@ -15,7 +16,7 @@
   margin-top: 25px;  
   text-align: justify;
   hyphens: auto;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 
